# funkan_tischenko_j3210

./: .gitignore  README.md  build_pdf.py  build_report_assets.py  generate_report_assets.py  pyproject.toml  report.tex
case_4/: README.md
case_6/: README.md  REPORT.md
docs/: README.md
notebooks/: README.md
notebooks/case_4/: report_case_4.ipynb
notebooks/case_6/: case_6_demo.ipynb  report_case_6.ipynb
report_outputs/: example.tex
report_outputs/latex_fragments/: auto_conclusions.tex  figures_case4.tex  figures_case6.tex  final_comparison_table.tex  tables_case4.tex  tables_case6.tex
report_outputs/tables/: best_kernel_models.csv  best_linear_models.csv  coefficient_stability.csv  dataset_description.csv  final_model_comparison.csv  final_synthetic_comparison.csv  gram_matrix_trig.csv  grid_sensitivity.csv  kernel_fixed_window_results.csv  kernel_variable_window_results.csv  kernel_vs_h_sensitivity.csv  linear_basis_comparison.csv  linearity_check.csv  lowess_final_weights.csv  lowess_outlier_comparison.csv  noise_sensitivity.csv  real_datasets_metrics.csv
src/: README.md
src/case_4/: __init__.py  basis.py  data.py  experiments.py  features.py  models.py  report_utils.py  types.py
src/case_6/: __init__.py  data.py  distance.py  experiments.py  kernels.py  lowess.py  metrics.py  nadaraya_watson.py  selection.py  types.py
tests/: README.md
tests/case_4/: test_basis_properties.py  test_case_4_smoke.py  test_data_and_features.py  test_experiments.py  test_models.py
tests/case_6/: test_case_6_smoke.py  test_kernels_and_nw.py  test_lowess.py  (+1 more)
